--- a/index4.html
+++ b/index4.html
@@ -12,18 +12,35 @@
 <body>
     <div class="wrapper">
         <h1>Task 4</h1>
-        <div class="button-container">
-            <p><input type="button" value="Ввод информации о напитке"
-                    onclick="drinkStorage.addValue(a = drinkNameEntry(), b = drinkInfoEntry());"></input></p>
-            <p><input type="button" value="Получение информации о напитке"
-                    onclick="getDrinkInfo(prompt('Введите название напитка:'))"></input></p>
-            <p><input type="button" value="Удаление информации о напитке" onclick="if(drinkStorage.deleteValue(prompt('Введите название напитка, который хотите удалить:')))
-            { prompt('Напиток удален!')} else {prompt('Напитка с таким названием не существует!')}"></input></p>
-            <p><input type="button" value="Перечень всех напитков" onclick="alert(drinkStorage.getKeys())"></input></p>
+        <div class="buttons-container">
+            <div class="buttons">
+                <!-- Вариант с функцией и map -->
+                <p>Вариант с функцией и map</p>
+                <p><input type="button" value="Ввод информации о напитке"
+                        onclick="drinkStorage.addValue(a = drinkNameEntry(), b = drinkInfoEntry());"></input></p>
+                <p><input type="button" value="Получение информации о напитке"
+                        onclick="getDrinkInfo(prompt('Введите название напитка:'))"></input></p>
+                <p><input type="button" value="Удаление информации о напитке" onclick="if(drinkStorage.deleteValue(prompt('Введите название напитка, который хотите удалить:')))
+            { alert('Напиток удален!')} else {alert('Напитка с таким названием не существует!')}"></input></p>
+                <p><input type="button" value="Перечень всех напитков" onclick="alert(drinkStorage.getKeys())"></input>
+                </p>
+            </div>
+            <div class="buttons">
+                <!-- Вариант с классом и объектом -->
+                <p>Вариант с классом и объектом</p>
+                <p><input type="button" value="Ввод информации о напитке"
+                        onclick="drinkStorage2.addValue(a = drinkNameEntry(), b = drinkInfoEntry());"></input></p>
+                <p><input type="button" value="Получение информации о напитке"
+                        onclick="getDrinkInfo2(prompt('Введите название напитка:'))"></input></p>
+                <p><input type="button" value="Удаление информации о напитке" onclick="delDrinkInfo()"></input></p>
+                <p><input type="button" value="Перечень всех напитков" onclick="alert(drinkStorage2.getKeys())"></input>
+                </p>
+            </div>
         </div>
         <script src="script4.js"></script>
         <script>
-            var drinkStorage = new HashStorageFunction();
+
+            /* Общий код для обоих вариантов */
 
             var drinkNameEntry = function () {
                 return prompt("Введите название напитка:");
@@ -34,6 +51,9 @@
                 var rec = prompt("Введите рецепт:");
                 return [alc, rec];
             }
+            /* Вариант с функцией и map */
+
+            var drinkStorage = new HashStorageFunction();
 
             var getDrinkInfo = function (drink) {
                 this.drink = drink;
@@ -49,6 +69,41 @@
                     alert(`Напиток ${drink}\nалкогольный: ${alc}\nрецепт приготовления:\n${info[1]}`);
                 }
             }
+
+            /* Вариант с классом и объектом */
+
+            var drinkStorage2 = new HashStorageFunction2(storage);
+
+            var getDrinkInfo2 = function (drink) {
+                this.drink = drink;
+                var info = drinkStorage2.getValue(drink);
+                if (!info) {
+                    alert("Напитка с таким названием не существует!");
+                } else {
+                    if (info[0]) {
+                        var alc = "да";
+                    } else {
+                        var alc = "нет";
+                    }
+                    alert(`Напиток ${drink}\nалкогольный: ${alc}\nрецепт приготовления:\n${info[1]}`);
+                }
+            }
+
+            let delDrinkInfo = function () {
+                if (drinkStorage2.deleteValue(prompt('Введите название напитка, который хотите удалить:'))) {
+                    alert('Напиток удален!')
+                } else {
+                    alert('Напитка с таким названием не существует!')
+                }
+            }
+
+
+
+
+
+
+
+
         </script>
     </div>
 </body>
