--- a/index6.html
+++ b/index6.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <h1>Task 6</h1>
         <button type="button" onclick="changeColor()">PUSH</button>
-        <table id="table" border="1" cellpadding="5" cellspacing="0">
+        <table border="1" cellpadding="5" cellspacing="0">
             <tr>
                 <td>1:1</td>
                 <td>2:1</td>
