--- a/index9.html
+++ b/index9.html
@@ -11,9 +11,9 @@
 
 <body>
     <div id="container">
-        <div><img src="pchela.jpg" alt="pchela" draggable="true" z-index="1"></div>
-        <div><img src="penguin.jpg" alt="penguin" draggable="true" z-index="2"></div>
-        <div><img src="wool_animal.jpg" alt="wool_animal" draggable="true" z-index="3"></div>
+        <div><img src="pchela.jpg" alt="pchela" draggable="true"></div>
+        <div><img src="penguin.jpg" alt="penguin" draggable="true"></div>
+        <div><img src="wool_animal.jpg" alt="wool_animal" draggable="true"></div>
     </div>
 
     <script src="script9.js"></script>
