--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </div>
         </div>
     </div>
-
+    <button type="button" id="autoFillButton">Автозаполнение</button>
     <script src="fillField.js"></script>
 </body>
 
