--- a/index.html
+++ b/index.html
@@ -11,7 +11,131 @@
 
 <body>
     <div class="wrapper">
-        <div class="field">
+        <div class="field1">
+            <table>
+                <tr>
+                    <td id="00comp"></td>
+                    <td id="01comp"></td>
+                    <td id="02comp"></td>
+                    <td id="03comp"></td>
+                    <td id="04comp"></td>
+                    <td id="05comp"></td>
+                    <td id="06comp"></td>
+                    <td id="07comp"></td>
+                    <td id="08comp"></td>
+                    <td id="09comp"></td>
+                </tr>
+                <tr>
+                    <td id="10comp"></td>
+                    <td id="11comp"></td>
+                    <td id="12comp"></td>
+                    <td id="13comp"></td>
+                    <td id="14comp"></td>
+                    <td id="15comp"></td>
+                    <td id="16comp"></td>
+                    <td id="17comp"></td>
+                    <td id="18comp"></td>
+                    <td id="19comp"></td>
+                </tr>
+                <tr>
+                    <td id="20comp"></td>
+                    <td id="21comp"></td>
+                    <td id="22comp"></td>
+                    <td id="23comp"></td>
+                    <td id="24comp"></td>
+                    <td id="25comp"></td>
+                    <td id="26comp"></td>
+                    <td id="27comp"></td>
+                    <td id="28comp"></td>
+                    <td id="29comp"></td>
+                </tr>
+                <tr>
+                    <td id="30comp"></td>
+                    <td id="31comp"></td>
+                    <td id="32comp"></td>
+                    <td id="33comp"></td>
+                    <td id="34comp"></td>
+                    <td id="35comp"></td>
+                    <td id="36comp"></td>
+                    <td id="37comp"></td>
+                    <td id="38comp"></td>
+                    <td id="39comp"></td>
+                </tr>
+                <tr>
+                    <td id="40comp"></td>
+                    <td id="41comp"></td>
+                    <td id="42comp"></td>
+                    <td id="43comp"></td>
+                    <td id="44comp"></td>
+                    <td id="45comp"></td>
+                    <td id="46comp"></td>
+                    <td id="47comp"></td>
+                    <td id="48comp"></td>
+                    <td id="49comp"></td>
+                </tr>
+                <tr>
+                    <td id="50comp"></td>
+                    <td id="51comp"></td>
+                    <td id="52comp"></td>
+                    <td id="53comp"></td>
+                    <td id="54comp"></td>
+                    <td id="55comp"></td>
+                    <td id="56comp"></td>
+                    <td id="57comp"></td>
+                    <td id="58comp"></td>
+                    <td id="59comp"></td>
+                </tr>
+                <tr>
+                    <td id="60comp"></td>
+                    <td id="61comp"></td>
+                    <td id="62comp"></td>
+                    <td id="63comp"></td>
+                    <td id="64comp"></td>
+                    <td id="65comp"></td>
+                    <td id="66comp"></td>
+                    <td id="67comp"></td>
+                    <td id="68comp"></td>
+                    <td id="69comp"></td>
+                </tr>
+                <tr>
+                    <td id="70comp"></td>
+                    <td id="71comp"></td>
+                    <td id="72comp"></td>
+                    <td id="73comp"></td>
+                    <td id="74comp"></td>
+                    <td id="75comp"></td>
+                    <td id="76comp"></td>
+                    <td id="77comp"></td>
+                    <td id="78comp"></td>
+                    <td id="79comp"></td>
+                </tr>
+                <tr>
+                    <td id="80comp"></td>
+                    <td id="81comp"></td>
+                    <td id="82comp"></td>
+                    <td id="83comp"></td>
+                    <td id="84comp"></td>
+                    <td id="85comp"></td>
+                    <td id="86comp"></td>
+                    <td id="87comp"></td>
+                    <td id="88comp"></td>
+                    <td id="89comp"></td>
+                </tr>
+                <tr>
+                    <td id="90comp"></td>
+                    <td id="91comp"></td>
+                    <td id="92comp"></td>
+                    <td id="93comp"></td>
+                    <td id="94comp"></td>
+                    <td id="95comp"></td>
+                    <td id="96comp"></td>
+                    <td id="97comp"></td>
+                    <td id="98comp"></td>
+                    <td id="99comp"></td>
+                </tr>
+            </table>
+        </div>
+        <div class="field2">
             <table>
                 <tr>
                     <td id="00"></td>
@@ -138,35 +262,35 @@
         <div class="ships">
             <div class="ship ship1">
                 <table class="ship1-table" draggable="true">
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                    <tr id="linkor">
+                        <td class="part01"></td>
+                        <td class="part02"></td>
+                        <td class="part03"></td>
+                        <td class="part04"></td>
                     </tr>
                 </table>
             </div>
             <div class="ship ship2">
                 <table class="ship2-table" draggable="true">
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td class="part01"></td>
+                        <td class="part02"></td>
+                        <td class="part03"></td>
                     </tr>
                 </table>
             </div>
             <div class="ship ship3">
                 <table class="ship3-table" draggable="true">
                     <tr>
-                        <td></td>
-                        <td></td>
+                        <td class="part01"></td>
+                        <td class="part02"></td>
                     </tr>
                 </table>
             </div>
             <div class="ship ship4">
                 <table class="ship4-table" draggable="true">
                     <tr>
-                        <td></td>
+                        <td class="part01"></td>
                     </tr>
                 </table>
             </div>
