--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         </div>
         <div class="ships">
             <div class="ship ship1">
-                <table class="ship1-table" draggable="true">
+                <table class="ship1-table active" id="ship1-hor" draggable="true">
                     <tr id="linkor">
                         <td class="part01"></td>
                         <td class="part02"></td>
@@ -269,9 +269,23 @@
                         <td class="part04"></td>
                     </tr>
                 </table>
+                <table class="ship1-table inactive" id="ship1-vert" draggable="true">
+                    <tr>
+                        <td class="part01"></td>
+                    </tr>
+                    <tr>
+                        <td class="part02"></td>
+                    </tr>
+                    <tr>
+                        <td class="part03"></td>
+                    </tr>
+                    <tr>
+                        <td class="part04"></td>
+                    </tr>
+                </table>
             </div>
             <div class="ship ship2">
-                <table class="ship2-table" draggable="true">
+                <table class="ship2-table" id="ship1-hor" draggable="true">
                     <tr>
                         <td class="part01"></td>
                         <td class="part02"></td>
@@ -280,7 +294,7 @@
                 </table>
             </div>
             <div class="ship ship3">
-                <table class="ship3-table" draggable="true">
+                <table class="ship3-table" id="ship1-hor" draggable="true">
                     <tr>
                         <td class="part01"></td>
                         <td class="part02"></td>
@@ -288,7 +302,7 @@
                 </table>
             </div>
             <div class="ship ship4">
-                <table class="ship4-table" draggable="true">
+                <table class="ship4-table" id="ship1-hor" draggable="true">
                     <tr>
                         <td class="part01"></td>
                     </tr>
