--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <label for="diameter">Введите диаметр часов от 200 до 800:</label>
     <input type="number" name="diameter" id="diameter">
     <button class="button">Построить часы</button>
     <script src="script.js"></script>
