--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Battleship</title>
 </head>
 
 <body>
@@ -261,8 +261,9 @@
         </div>
         <div class="ships">
             <div class="ship ship1">
+                <img src="/ships_images/Battleship/ShipBattleshipHull.png" alt="ship1">
                 <table class="ship1-table active" id="ship1-hor" draggable="true">
-                    <tr id="linkor">
+                    <tr>
                         <td class="part01"></td>
                         <td class="part02"></td>
                         <td class="part03"></td>
@@ -285,6 +286,7 @@
                 </table>
             </div>
             <div class="ship ship2">
+                <img src="/ships_images/Cruiser/ShipCruiserHull.png" alt="ship2">
                 <table class="ship2-table" id="ship1-hor" draggable="true">
                     <tr>
                         <td class="part01"></td>
@@ -294,6 +296,7 @@
                 </table>
             </div>
             <div class="ship ship3">
+                <img src="/ships_images/Destroyer/ShipDestroyerHull.png" alt="ship3">
                 <table class="ship3-table" id="ship1-hor" draggable="true">
                     <tr>
                         <td class="part01"></td>
@@ -302,6 +305,7 @@
                 </table>
             </div>
             <div class="ship ship4">
+                <img src="/ships_images/Plane/PlaneF-35Lightning2.png" alt="ship4">
                 <table class="ship4-table" id="ship1-hor" draggable="true">
                     <tr>
                         <td class="part01"></td>
@@ -310,8 +314,10 @@
             </div>
         </div>
     </div>
-    <button type="button" id="autoFillButton">Автозаполнение</button>
+    <button type="button" id="autoFillButton">Автозаполнение для компьютера</button>
+    <button type="button" id="autoFillButton2">Автозаполнение для пользователя</button>
     <script src="fillField.js"></script>
+    <script src="battle.js"></script>
 </body>
 
 </html>
