--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <div class="ships">
             <div class="ship ship1">
                 <img src="/ships_images/Battleship/ShipBattleshipHull.png" alt="ship1">
-                <table class="ship1-table active" id="ship1-hor" draggable="true">
+                <table class="ship-table-hor ship1-table active" draggable="true">
                     <tr>
                         <td class="part01"></td>
                         <td class="part02"></td>
@@ -270,7 +270,7 @@
                         <td class="part04"></td>
                     </tr>
                 </table>
-                <table class="ship1-table inactive" id="ship1-vert" draggable="true">
+                <table class="ship-table-vert ship1-table inactive" draggable="true">
                     <tr>
                         <td class="part01"></td>
                     </tr>
@@ -287,26 +287,45 @@
             </div>
             <div class="ship ship2">
                 <img src="/ships_images/Cruiser/ShipCruiserHull.png" alt="ship2">
-                <table class="ship2-table" id="ship1-hor" draggable="true">
+                <table class="ship-table-hor ship2-table active" draggable="true">
                     <tr>
                         <td class="part01"></td>
                         <td class="part02"></td>
                         <td class="part03"></td>
                     </tr>
                 </table>
+                <table class="ship-table-vert ship2-table inactive" draggable="true">
+                    <tr>
+                        <td class="part01"></td>
+                    </tr>
+                    <tr>
+                        <td class="part02"></td>
+                    </tr>
+                    <tr>
+                        <td class="part03"></td>
+                    </tr>
+                </table>
             </div>
             <div class="ship ship3">
                 <img src="/ships_images/Destroyer/ShipDestroyerHull.png" alt="ship3">
-                <table class="ship3-table" id="ship1-hor" draggable="true">
+                <table class="ship-table-hor ship3-table active" draggable="true">
                     <tr>
                         <td class="part01"></td>
+                        <td class="part02"></td>
+                    </tr>
+                </table>
+                <table class="ship-table-vert ship3-table inactive" draggable="true">
+                    <tr>
+                        <td class="part01"></td>
+                    </tr>
+                    <tr>
                         <td class="part02"></td>
                     </tr>
                 </table>
             </div>
             <div class="ship ship4">
                 <img src="/ships_images/Plane/PlaneF-35Lightning2.png" alt="ship4">
-                <table class="ship4-table" id="ship1-hor" draggable="true">
+                <table class="ship-table-hor ship4-table" draggable="true">
                     <tr>
                         <td class="part01"></td>
                     </tr>
@@ -316,6 +335,7 @@
     </div>
     <button type="button" id="autoFillButton">Автозаполнение для компьютера</button>
     <button type="button" id="autoFillButton2">Автозаполнение для пользователя</button>
+
     <script src="fillField.js"></script>
     <script src="battle.js"></script>
 </body>
