--- a/index.html
+++ b/index.html
@@ -335,7 +335,15 @@
     </div>
     <button type="button" id="autoFillButton">Автозаполнение для компьютера</button>
     <button type="button" id="autoFillButton2">Автозаполнение для пользователя</button>
-
+    <div class="rules">
+        <p>Правила игры:</p>
+        <p>Перетаскивайте корабли мышкой на поле или в любой момент нажмите кнопку
+            "Автозаполнение для пользователя", чтобы автоматически заполнить поле.
+            Щелкните по картинке нужного корабля правой кнопкой мышки перед началом перетаскивания, чтобы
+            изменить положение корабля на вертикальное или обратно.
+            После появления сообщения "Битва началась" щелкайте левой кнопкой мыши по полю противника, чтобы атаковать.
+        </p>
+    </div>
     <script src="fillField.js"></script>
     <script src="battle.js"></script>
 </body>
