update_from_comp

--- a/index.html
+++ b/index.html
@@ -263,6 +263,9 @@
             </table>
         </div>
         <div class="ships">
+            <button type="button" id="autoFillButton">FILL</button>
+            <button type="button" id="resetButton">RESET</button>
+            <button type="button" id="startButton">START BATTLE</button>
             <div class="ship ship1">
                 <img src="ships_images/Battleship/ShipBattleshipHull.png" alt="ship1">
                 <table class="ship-table-hor ship1-table active" draggable="true">
@@ -341,9 +344,7 @@
         </div>
     </div>
     <div class="container">
-        <button type="button" id="autoFillButton">Автозаполнение для компьютера</button>
-        <button type="button" id="autoFillButton2">Автозаполнение для пользователя</button>
-        <div class="rules">
+        <div class="rules inactive">
             <p>Правила игры:</p>
             <p>Перетаскивайте корабли мышкой на поле или в любой момент нажмите кнопку
                 "Автозаполнение для пользователя", чтобы автоматически заполнить поле.
