--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src='http://fe.it-academy.by/JQ/jquery.js'></script>
     <title>Battleship</title>
 </head>
 
 <body>
+    <div id="new-pages-container"></div>
     <div class="wrapper">
         <div class="field1">
             <table>
@@ -355,8 +357,15 @@
             </p>
         </div>
     </div>
+    <div class="links-container">
+        <a href="#">MENU</a>
+        <a href="#">HISCORE</a>
+        <a href="#">RULES</a>
+    </div>
+    <!-- <button type="button" class="test-reset">TEST</button> -->
     <script src="fillField.js"></script>
     <script src="battle.js"></script>
+    <script src="ajax.js"></script>
 </body>
 
 </html>
