main menu added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
 <body>
     <div id="new-pages-container"></div>
-    <div class="wrapper">
+    <div style="display: none" class="navigation">
+        <button class="mute-button" type="button"></button>
+    </div>
+    <div style="display: none" class="wrapper">
         <div class="field1">
             <table>
                 <tr>
@@ -345,18 +348,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="rules inactive">
-            <p>Правила игры:</p>
-            <p>Перетаскивайте корабли мышкой на поле или в любой момент нажмите кнопку
-                "Автозаполнение для пользователя", чтобы автоматически заполнить поле.
-                Щелкните по картинке нужного корабля правой кнопкой мышки перед началом перетаскивания, чтобы
-                изменить положение корабля на вертикальное или обратно.
-                После появления сообщения "Битва началась" щелкайте левой кнопкой мыши по полю противника, чтобы
-                атаковать.
-            </p>
-        </div>
-    </div>
+
     <div class="links-container">
         <a href="#">MENU</a>
         <a href="#">HISCORE</a>
