--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src='http://fe.it-academy.by/JQ/jquery.js'></script>
+    <script src='https://fe.it-academy.by/JQ/jquery.js'></script>
     <title>Battleship</title>
 </head>
 
