music settings added

--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@
     <script src="fillField.js"></script>
     <script src="battle.js"></script>
     <script src="ajax.js"></script>
+    <script src="settings.js"></script>
 </body>
 
 </html>
