--- a/settings.html
+++ b/settings.html
@@ -18,12 +18,12 @@
         </div>
         <div class="block adjacent-area">
             <p>AREA AROUND SHIP AUTOFILL</p>
-            <input type="checkbox" checked>
+            <input id="area" type="checkbox" checked>
         </div>
         <div class="block music">
             <p>MUSIC</p>
             <span>ON</span>
-            <input name="music-on-off" checked type="radio">
+            <input name="music-on-off" type="radio">
             <span>OFF</span>
             <input name="music-on-off" type="radio">
         </div>
