level settings added

--- a/settings.html
+++ b/settings.html
@@ -11,9 +11,9 @@
         <div class="block level">
             <p>LEVEL</p>
             <select name="select-level" id="level">
-                <option value="easy">Easy</option>
-                <option value="intermediate" selected>Intermediate</option>
-                <option value="hard">Hard</option>
+                <option id="level-1" value="easy">Easy</option>
+                <option id="level-2" value="intermediate">Intermediate</option>
+                <option id="level-3" value="hard">Hard</option>
             </select>
         </div>
         <div class="block adjacent-area">
