navigation and info panels added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 <body>
     <div id="new-pages-container"></div>
     <div style="display: none" class="navigation">
-        <button class="mute-button" type="button"></button>
+        <a href="#">MAIN MENU</a>
+    </div>
+    <div style="display: none" class="info">
+        <p>ENEMY SHIPS LEFT: <span id="comp-ships-left">10</span></p>
+        <p>MOVES: <span id="moves-count">0</span></p>
+        <p>YOUR SHIPS LEFT: <span id="user-ships-left">10</span></p>
     </div>
     <div style="display: none" class="wrapper">
         <div class="field1">
@@ -347,12 +352,6 @@
                 <div class="ship-count count4"></div>
             </div>
         </div>
-    </div>
-
-    <div class="links-container">
-        <a href="#">MENU</a>
-        <a href="#">HISCORE</a>
-        <a href="#">RULES</a>
     </div>
     <!-- <button type="button" class="test-reset">TEST</button> -->
     <script src="fillField.js"></script>
