--- a/menu.html
+++ b/menu.html
@@ -3,10 +3,6 @@
         opacity: 1;
         z-index: 3;
     }
-
-    .wrapper {
-        display: none;
-    }
 </style>
 
 <div class="name"></div>
@@ -15,6 +11,7 @@
     <button type="button" class="settings">SETTINGS</button>
     <button type="button" class="hiscore">HISCORE</button>
     <button type="button" class="rules">RULES</button>
+    <button style="display: none;" type="button" class="new-game">START NEW GAME</button>
 </div>
 
 <!-- <img class="background-image" src="images/background.jpg" alt="background-image"> -->
