changes in main menu and settings

--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
     <button type="button" class="settings">SETTINGS</button>
     <button type="button" class="hiscore">HISCORE</button>
     <button type="button" class="rules">RULES</button>
-    <button style="display: none;" type="button" class="new-game">START NEW GAME</button>
+    <button style="display: none;" type="button" class="new-game">NEW GAME</button>
 </div>
 
 <!-- <img class="background-image" src="images/background.jpg" alt="background-image"> -->
