--- a/settings.html
+++ b/settings.html
@@ -15,6 +15,7 @@
                 <option id="level-2" value="intermediate">Intermediate</option>
                 <option id="level-3" value="hard">Hard</option>
             </select>
+            <div class="shadow inactive"></div>
         </div>
         <div class="block adjacent-area">
             <p>AREA AROUND SHIP AUTOFILL</p>
